--- a/src/main/resources/templates/template/admin_forms_template.html
+++ b/src/main/resources/templates/template/admin_forms_template.html
@@ -157,31 +157,31 @@
       
                     <div class="mb-3">
                     <label>Marca: </label>
-                    <input type="text" name="marca" required="true"/>
+                    <input type="text" name="marca" required="true">
                     </div>
                     <div class="mb-3">
                     <label>Modelo: </label>
-                    <input type="text" name="modelo" required="true"/>
+                    <input type="text" name="modelo" required="true">
                     </div>
                     <div class="mb-3">
                     <label>Patente: </label>
-                    <input type="text" name="patente" required="true"/>
+                    <input type="text" name="patente" required="true">
                     </div>
                     <div class="mb-3">
                     <label>Color: </label>
-                    <input type="text" name="color" required="true"/>
+                    <input type="text" name="color" required="true">
                     </div>
                     <div class="mb-3">
                     <label>Precio Alquiler: </label>
-                    <input type="text" name="precio_alquiler" required="true"/>
+                    <input type="text" name="precio_alquiler" required="true">
                     </div>
                     <div class="mb-3">
                     <label>Litros en Tanque: </label>
-                    <input type="text" name="litros_combustible" required="true"/>
+                    <input type="text" name="litros_combustible" required="true">
                     </div>
                     <div class="mb-3">
                     <label>Entregado: </label>
-                    <input type="text" name="entregado" required="true"/>
+                    <input type="text" name="entregado" required="true">
                     </div>
                     
                     <input type="hidden" name="id" th:value="${usuario.id}">
