--- a/src/main/resources/templates/vista_vendedor.html
+++ b/src/main/resources/templates/vista_vendedor.html
@@ -77,7 +77,7 @@ and open the template in the editor.
                             </button>
                         </form>
                         <br>
-                        <table class="table table-bordered table-success table-striped table-hover">
+                        <table class="table table-bordered table-success table-striped table-hover center">
                             <thead>
                                 <tr>
                                     <td>Id Reserva</td>
@@ -86,8 +86,7 @@ and open the template in the editor.
                                     <td>Precio Total</td>
                                     <td>ID Oficina</td>
                                     <td>ID Cliente</td>
-                                    <td>Vehiculos Entregados</td>
-                                    <td>Vehiculos Reservados</td>
+                                    <td>Items en Reserva</td>
                                     <td>Editar Reserva</td>
                                     <td>Eliminar Reserva</td>
                                 </tr>
@@ -101,10 +100,8 @@ and open the template in the editor.
                                     <td th:text="${reserva.id_oficina}"></td>
                                     <td th:text="${reserva.id_cliente}"></td>
                                     <td>
-                                        <a th:href="@{/vendedor/vehiculos/entregados}">Vehiculos Entregados</a>
-                                    </td>
-                                    <td>
-                                        <a th:href="@{/vendedor/vehiculos/reservados}">Vehiculos Reservados</a>
+
+                                        <button class="btn btn-secondary" th:href="@{/vendedor/vehiculos/reservados}">Ver</a>
                                     </td>
                                     <td><form method="get" th:action="@{/vendedor/reservas/edit/{reserva_id}(reserva_id=${reserva.id})}">
                                             <input type="hidden" name="action" th:value="EDIT_RESERVA">
@@ -131,5 +128,7 @@ and open the template in the editor.
 
                     <div th:replace="template/main_template::general_scripts"></div>
                     <footer th:replace="template/main_template::general_footer"></footer>
+
+                    
                     </body>
                     </html>
