--- a/src/main/resources/templates/template/admin_forms_template.html
+++ b/src/main/resources/templates/template/admin_forms_template.html
@@ -45,7 +45,7 @@
                     </div>
                     <input type="hidden" name="id" th:value="${usuario.id}">
                     <div class="mb-4">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <a class="btn btn-secondary" th:href="@{/admin/volver(id=${usuario.id}, action=USUARIOS)}">Cerrar</a>
                         <input type="submit" class="btn btn-primary" value="Agregar Usuario">
 
                     </div>
@@ -98,7 +98,7 @@
                     <div class="mb-4">
 
                     
-                        <button type="button" href="" class="btn btn-secondary">Volver Atras</button>
+                        <a class="btn btn-secondary" th:href="@{/admin/volver(id=${id}, action=USUARIOS)}">Cerrar</a>
                         <button type="submit" class="btn btn-primary">Actualizar Usuario</button>
 
                     </div>
@@ -139,7 +139,7 @@
                     <div class="mb-4">
 
                     
-                        <button type="button" class="btn btn-secondary">Cerrar</button>
+                        <a class="btn btn-secondary" th:href="@{/admin/volver(id=${id}, action=USUARIOS)}">Cerrar</a>
                         <button type="submit" class="btn btn-primary">Eliminar Usuario</button>
 
                     </div>
@@ -186,7 +186,7 @@
                     
                     <input type="hidden" name="id" th:value="${usuario.id}">
                     <div class="mb-4">
-                        <button type="button" class="btn btn-secondary" >Cerrar</button>
+                        <a class="btn btn-secondary" th:href="@{/admin/volver(id=${usuario.id}, action=VEHICULOS)}">Cerrar</a>
                         <input type="submit" class="btn btn-primary" value="Agregar Vehiculo">
 
                     </div>
@@ -231,7 +231,7 @@
                     <div class="mb-4">
 
                     
-                        <button type="button" href="" class="btn btn-secondary">Volver Atras</button>
+                        <a class="btn btn-secondary" th:href="@{/admin/volver(id=${id}, action=VEHICULOS)}">Cerrar</a>
                         <button type="submit" class="btn btn-primary">Actualizar Vehiculo</button>
 
                     </div>
@@ -277,7 +277,7 @@
                     <div class="mb-4">
 
                     
-                        <button type="button" class="btn btn-secondary">Cerrar</button>
+                        <a class="btn btn-secondary" th:href="@{/admin/volver(id=${id}, action=VEHICULOS)}">Cerrar</a>
                         <button type="submit" class="btn btn-primary">Eliminar Vehiculo</button>
 
                     </div>
