--- a/src/main/resources/templates/vista_cliente.html
+++ b/src/main/resources/templates/vista_cliente.html
@@ -16,14 +16,13 @@ and open the template in the editor.
     <table class="table table-bordered table-success table-striped table-hover">
         <thead>
             <tr>
-                <td>Id Reserva</td>
-                <td>Fecha de Inicio</td>
-                <td>Fecha de Cierre</td>
-                <td>Precio Total</td>
-                <td>ID Oficina</td>
-                <td>ID Cliente</td>
-                <td>Vehiculos Entregados</td>
-                <td>Vehiculos Reservados</td>
+                <th>Id</th>
+                <th>Fecha de Inicio</th>
+                <th>Fecha de Cierre</th>
+                <th>Precio Total</th>
+                <th>ID Oficina</th>
+                <th>ID Cliente</th>
+                <th>Vehiculos</th>
             </tr>
         </thead>
         <tbody>
@@ -34,8 +33,7 @@ and open the template in the editor.
                 <td th:text="${reserva.precio_total}"></td>
                 <td th:text="${reserva.id_oficina}"></td>
                 <td th:text="${reserva.id_cliente}"></td>
-                <td><a href="" class="btn btn-success btn-sm">Mostrar Entregados</a>
-                <td><a href="" class="btn btn-success btn-sm">Mostrar Reservados</a>
+                <td><a th:href="@{/cliente/vehiculos(id_reserva=${reserva.id}, id=${usuario.id})}" class="btn btn-success btn-sm">Ver</a>
             </tr>
         </tbody>
     </table>
