Modificado Diferencia de Fechas en Add Reserva

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@ and open the template in the editor.
             </div>
             <div class="mb-3">
                 <label for="pass" class="form-label">Password:</label>
-                <input type="text" class="form-control" name="pass" placeholder="Password">
+                <input type="password" class="form-control" name="pass" placeholder="Password">
             </div>
            
             <input type="submit" class="btn btn-success" value="Login">
