--- a/src/main/resources/templates/vista_vendedor.html
+++ b/src/main/resources/templates/vista_vendedor.html
@@ -133,7 +133,21 @@ and open the template in the editor.
 
                     <div th:replace="template/main_template::general_scripts"></div>
                     <footer th:replace="template/main_template::general_footer"></footer>
+                    
+                    <script type="text/javascript">
+                        var today = new Date();
+                        var dd = today.getDate();
+                        var mm = today.getMonth() + 1; //January is 0!
+                        var yyyy = today.getFullYear();
+                        if (dd < 10) {
+                            dd = '0' + dd;
+                        }
+                        if (mm < 10) {
+                            mm = '0' + mm;
+                        }
 
-
+                        today = yyyy + '-' + mm + '-' + dd;
+                        document.getElementById("datefield").setAttribute("max", today);
+                    </script>
                     </body>
                     </html>
